# flashcards

./: .gitignore  README.md  setup.cfg
flashcards_dinazoe.egg-info/: PKG-INFO  SOURCES.txt
