[metadata]
name = flashcards-dinazoe
version = 0.0.1
author = Dima Kapitan
author_email = notreally@doesntexist.com
description = Package to with flashcards utility classes/functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dinazoe/flashcards
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7